Moving tutorial files and adding .env file

--- a/code/01-hello-world/hello-world.ipynb
+++ b/code/01-hello-world/hello-world.ipynb
@@ -4,7 +4,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Hello World"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we need to initialize our environment to use the Lucata toolchain. This toolchain allows you to compile Cilk code with x86, the Lucata simulator, and for hardware execution. We source the toolchain using an environment script.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lucata tools are added to current path from /tools/emu/pathfinder-sw/21.06\r\n",
+      "/bin/bash: which-emu-cc: command not found\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!source /tools/emu/pathfinder-sw/set-lucata-env.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Here is a \"Hello, world\" example to start showing aspects of writing for the Emu:\n",
+    "\n",
     "```c\n",
     "#include <stdlib.h>\n",
     "#include <stdio.h>\n",
@@ -47,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An improved version, in hello-world/hello-world.c, showing use of `replicated`:\n",
+    "An improved version, in hello-world/hello-world.c, showing the usage of the `replicated` type:\n",
     "```c\n",
     "#include <stdlib.h>\n",
     "#include <stdio.h>\n",
@@ -90,9 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: emu-cc: command not found\r\n"
+     ]
+    }
+   ],
    "source": [
     "!emu-cc -o hello-world.mwx hello-world/hello-world.c"
    ]
@@ -539,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
