--- a/code/05-stream-example/NB-05-stream-emu-chick.ipynb
+++ b/code/05-stream-example/NB-05-stream-emu-chick.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Serial spawning\n",
+    "## Serial spawning\n",
     "\n",
     "I'll need to explain the data layout a bit...  This is using 2D chunked arrays.  Each nodelet has a chunk of consecutive memory.  Every nodelet has a pointer to each nodelet's local memory.  On the Emu platform, *all* pointers are global.\n",
     "\n",
@@ -625,18 +625,11 @@
     "emu_handler_and_loader 0 0 -- global_stream.mwx recursive_remote_spawn 24 512 1\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python Notebook - CRNCH Tutorial",
    "language": "python",
    "name": "python3"
   },
@@ -650,9 +643,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
