Updated examples to compile with newest tools. Split notebook into two pieces

--- a/code/01-hello-world/NB01-hello-world.ipynb
+++ b/code/01-hello-world/NB01-hello-world.ipynb
@@ -11,17 +11,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first need to initialize our environment to use the Lucata toolchain. This toolchain allows you to compile Cilk code with x86, the Lucata simulator, and for hardware execution. Note that this notebook should load the toolchain using the included .env file, so this is just if you wanted to compile code on the command line.\n"
+    "### Lesson Objectives\n",
+    "\n",
+    "Upon completing this notebook you should be able to understand and apply the following concepts:\n",
+    "1) How to set up your environment to use the Lucata toolchain to compile code\n",
+    "2) Understand the different Lucata tools including *emu-cc*, *emusim.x*, and various plotting helper scripts.\n",
+    "3) Be able to run a simple Hello World script that spawns Emu threads and then syncs the result.\n",
+    "4) Run a simulation with timing that generates statistics for plotting.\n",
+    "5) Look at and compare some simple spawn operations for the Lucata architecture."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment Setup\n",
+    "\n",
+    "We first need to initialize our environment to use the Lucata toolchain. This toolchain allows you to compile Cilk code with x86, the Lucata simulator, and for hardware execution. Note that this notebook should load the toolchain using the included .env file, so this is just if you wanted to compile code on the command line."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lucata tools are added to current path from /tools/emu/pathfinder-sw/22.02\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!. /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
-    "!which emu-cc"
+    "!. /tools/emu/pathfinder-sw/set-lucata-env.sh"
    ]
   },
   {
@@ -33,9 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/nethome/jyoung9/tutorial/lucata-pathfinder-tutorial/code\n",
+      "/tools/emu/pathfinder-sw/22.02/bin/emu-cc\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -43,14 +75,16 @@
     "os.environ[\"USER_NOTEBOOK_CODE\"]=os.path.dirname(os.getcwd())\n",
     "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/22.02/bin\",os.environ[\"PATH\"]])\n",
     "\n",
-    "!echo $USER_NOTEBOOK_CODE"
+    "!echo $USER_NOTEBOOK_CODE\n",
+    "#Print out which Emu compiler, emu-cc, we are using\n",
+    "!which emu-cc"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Naive Hello World"
+    "## Code Example 1 - Naive Hello World"
    ]
   },
   {
@@ -102,14 +136,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###  Compilation and simulation for the Pathfinder\n",
     "We'll test compiling this example to show the syntax and then move on to a more optimized example. Note that the .mwx output can be used for simulation and execution on the Pathfinder system."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello-world-naive.mwx\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "cd ${USER_NOTEBOOK_CODE}/01-hello-world\n",
@@ -119,10 +162,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start untimed simulation with local date and time= Fri Jul 15 15:30:38 2022\n",
+      "\n",
+      "Hello, world!\n",
+      "TID0 NODE 0 DIED NODE 0 FUNC @_Exit @cycle 7319\n",
+      "End untimed simulation with local date and time= Fri Jul 15 15:30:38 2022\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
+      "        Copyright (c) 1996-2018 by all Contributors,\n",
+      "        ALL RIGHTS RESERVED\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "#Run a basic simulation with memory size 2^21, one node, and the naive Hello World executable as input\n",
+    "emusim.x --untimed -m 21 --total_nodes 1 -- hello-world-naive.mwx"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hello World\n",
+    "## Code Example 2 - Hello World with Replication\n",
     "\n",
     "With the Lucata architecture, we often want to avoid spurious migrations by replicating data across nodes so that each node has a copy of the relevant data it needs. This improved sample in `hello-world/hello-world.c`, demonstrates the usage of the `replicated` type:\n",
     "\n",
@@ -146,9 +223,7 @@
     "     // long is the reliable word length, 64-bits.\n",
     "     const long n = strlen (str) + 1;\n",
     "\n",
-    "     /* Allocating a copy on each nodelet reduces migrations in theory.\n",
-    "        In *this* case, the pointers stay in registers and do not trigger migration.\n",
-    "        But that's up to compiler register allocation... */\n",
+    "     // Allocating a copy of data on each nodelet typically reduces migrations for commonly accessed elements \n",
     "     mw_replicated_init ((long*)&ptr, (long)mw_malloc1dlong (n));\n",
     "     mw_replicated_init ((long*)&str_out, (long)malloc (n * sizeof (char)));\n",
     "\n",
@@ -162,132 +237,67 @@
     "\n",
     "     printf(\"%s\\n\", str_out);  // Migration back\n",
     "}\n",
-    "```\n",
-    "Let's compile and simulate this one. "
+    "``` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello-world.mwx\n",
+      "hello-world-naive.mwx\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    ". /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
+    "#. /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
     "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
     "emu-cc -o hello-world.mwx $FLAGS hello-world.c\n",
     "ls *.mwx"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that we are using the \"capture_timing_queues\" and \"output_instruction_count\" flags to generate some added data from the simulator. These generate tqd and uis files respectively."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start untimed simulation with local date and time= Fri Jul 15 15:30:40 2022\n",
+      "\n",
+      "End untimed simulation with local date and time= Fri Jul 15 15:30:40 2022\n",
+      "\n",
+      "SysC Enumeration done. Program launching...\n",
+      "Simulation @0 s with local date and time= Fri Jul 15 15:30:40 2022\n",
+      "\n",
+      "Hello, world!\n",
+      "\n",
+      "Info: /OSCI/SystemC: Simulation stopped by user.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
+      "        Copyright (c) 1996-2018 by all Contributors,\n",
+      "        ALL RIGHTS RESERVED\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
-    ". /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
-    "emusim.x --capture_timing_queues -m 20 --total_nodes 1 --output_instruction_count -- hello-world.mwx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!ls hello-world.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We now have several different output files. These are detailed in Ch. 7.6 of the Programming Guide and are as follows:\n",
-    "* hello-world.mwx - Lucata executable\n",
-    "* hello-world.cdc - Configuration data output file; includes system information and wall-clock time\n",
-    "* hello-world.mps - Memory map output; shows memory operation types and thread enqueuing\n",
-    "* hello-world.tqd - Timed activity tracing; includes live threads, thread activity counts, and requests\n",
-    "* hello-world.uis - Instruction count statistics; shows the number of instructions per function in the application and number of migrations\n",
-    "* hello-world.vsf - Verbose statistics information; advanced counter statistics for debugging bottlenecks\n",
-    "\n",
-    "These files can be used with plotting tools to provide detailed output on the simulation of the application."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    ". /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
-    "make_tqd_plots.py hello-world.tqd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Image, display\n",
-    "display(Image(filename=\"hello-world.Live_Threads.png\"))\n",
-    "display(Image(filename=\"hello-world.Thread_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world.MSP_Activity.png\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    ". /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
-    "make_map_plots.py hello-world.mps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(Image(filename=\"hello-world.Thread_Enqueue_Map.png\"))\n",
-    "display(Image(filename=\"hello-world.Memory_Read_Map.png\"))\n",
-    "display(Image(filename=\"hello-world.Memory_Write_Map.png\"))\n",
-    "display(Image(filename=\"hello-world.Atomic_Transaction_Map.png\"))\n",
-    "display(Image(filename=\"hello-world.Remote_Transaction_Map.png\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    ". /tools/emu/tutorial-env.sh\n",
-    "make_uis_plots.py hello-world.uis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display(Image(filename=\"hello-world_total_instructions.png\"))"
+    "#. /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
+    "emusim.x -m 21 --total_nodes 1 -- hello-world.mwx"
    ]
   },
   {
@@ -336,18 +346,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lucata tools are added to current path from /tools/emu/pathfinder-sw/22.02\n",
+      "Start untimed simulation with local date and time= Fri Jul 15 15:30:43 2022\n",
+      "\n",
+      "End untimed simulation with local date and time= Fri Jul 15 15:30:43 2022\n",
+      "\n",
+      "SysC Enumeration done. Program launching...\n",
+      "Simulation @0 s with local date and time= Fri Jul 15 15:30:43 2022\n",
+      "\n",
+      "Hello, world!\n",
+      "\n",
+      "Info: /OSCI/SystemC: Simulation stopped by user.\n",
+      "hello-world-spawn-at.c\n",
+      "hello-world-spawn.c\n",
+      "hello-world-spawn.cdc\n",
+      "hello-world-spawn.mps\n",
+      "hello-world-spawn.mwx\n",
+      "hello-world-spawn.uis\n",
+      "hello-world-spawn.vsf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
+      "        Copyright (c) 1996-2018 by all Contributors,\n",
+      "        ALL RIGHTS RESERVED\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     ". /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
-    "emu-cc -o hello-world-spawn.mwx hello-world-spawn.c\n",
-    "emusim.x --capture_timing_queues --output_instruction_count -- hello-world-spawn.mwx\n",
-    "ls hello-world-spawn*\n",
-    "make_tqd_plots.py hello-world-spawn.tqd\n",
-    "make_map_plots.py hello-world-spawn.mps\n",
-    "make_uis_plots.py hello-world-spawn.uis"
+    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "emu-cc -o hello-world-spawn.mwx $FLAGS hello-world-spawn.c\n",
+    "emusim.x --untimed -m 21 --total_nodes 1 -- hello-world-spawn.mwx\n",
+    "ls hello-world-spawn*"
    ]
   },
   {
@@ -359,109 +402,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(Image(filename=\"hello-world.Live_Threads.png\"))\n",
-    "display(Image(filename=\"hello-world-spawn.Live_Threads.png\"))\n",
-    "display(Image(filename=\"hello-world.Thread_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world-spawn.Thread_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world.MSP_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world-spawn.MSP_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world_total_instructions.png\"))\n",
-    "display(Image(filename=\"hello-world-spawn_total_instructions.png\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Advanced Implementation - Spawn At\n",
-    "\n",
-    "This example just shows one additional variation of using a `cilk_spawn_at` call to spawn threads at a remote node\n",
-    "\n",
-    "```c\n",
-    "#include <stdlib.h>\n",
-    "#include <stdio.h>\n",
-    "#include <string.h>\n",
-    "#include <cilk.h>\n",
-    "\n",
-    "#include <memoryweb.h>\n",
-    "#include <timing.h>\n",
-    "\n",
-    "static const char str[] = \"Hello, world!\";\n",
-    "\n",
-    "static inline void copy_ptr (char *pc, const long *pl) { *pc = (char)*pl; }\n",
-    "\n",
-    "replicated long * ptr;\n",
-    "replicated char * str_out;\n",
-    "\n",
-    "int main (void)\n",
-    "{\n",
-    "     long n = strlen (str) + 1;\n",
-    "\n",
-    "     mw_replicated_init ((long*)&ptr, (long)mw_malloc1dlong (n));\n",
-    "     mw_replicated_init ((long*)&str_out, (long)malloc (n * sizeof (char)));\n",
-    "\n",
-    "     starttiming();\n",
-    "\n",
-    "     for (long k = 0; k < n; ++k)\n",
-    "          ptr[k] = (long)str[k]; // Remote writes\n",
-    "\n",
-    "     for (long k = 0; k < n; ++k) {\n",
-    "          cilk_spawn_at(&ptr[k]) copy_ptr (&str_out[k], &ptr[k]);\n",
-    "     }\n",
-    "\n",
-    "     printf(\"%s\\n\", str_out);  // Migration back\n",
-    "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    ". /tools/emu/pathfinder-sw/set-lucata-env.sh\n",
-    "emu-cc -o hello-world-spawn-at.mwx hello-world-spawn-at.c\n",
-    "emusim.x --capture_timing_queues --output_instruction_count -- hello-world-spawn-at.mwx\n",
-    "ls hello-world-spawn-at*\n",
-    "make_map_plots.py hello-world-spawn-at.mps\n",
-    "make_tqd_plots.py hello-world-spawn-at.tqd\n",
-    "make_uis_plots.py hello-world-spawn-at.uis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(Image(filename=\"hello-world.Live_Threads.png\"))\n",
-    "display(Image(filename=\"hello-world-spawn-at.Live_Threads.png\"))\n",
-    "display(Image(filename=\"hello-world.Thread_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world-spawn-at.Thread_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world.MSP_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world-spawn-at.MSP_Activity.png\"))\n",
-    "display(Image(filename=\"hello-world_total_instructions.png\"))\n",
-    "display(Image(filename=\"hello-world-spawn-at_total_instructions.png\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once we've finished our testing, we can then clean up some of the logfiles that we used for this example. Here we'll run `make clean` to save our figures in a separate directory and finish this demo."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm -f *.mwx *.tqd *.cdc *.vsf *.mps; \\\r\n",
+      "./helpers/backup_imgs.sh\r\n"
+     ]
+    }
+   ],
    "source": [
     "!make clean"
    ]
@@ -483,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
