Updated NB2 to use newer tools and flags

--- a/code/02-saxpy-basics/NB02-saxpy-basics.ipynb
+++ b/code/02-saxpy-basics/NB02-saxpy-basics.ipynb
@@ -21,8 +21,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"USER_NOTEBOOK_CODE\"]=os.environ[\"HOME\"]+\"/pearc-tutorial/code\"\n",
-    "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/21.06/bin\",os.environ[\"PATH\"]])"
+    "os.environ[\"USER_NOTEBOOK_CODE\"]=os.path.dirname(os.getcwd())\n",
+    "os.environ[\"PATH\"]=os.pathsep.join([\"/tools/emu/pathfinder-sw/22.02/bin\",os.environ[\"PATH\"]])"
    ]
   },
   {
@@ -93,9 +93,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Mon Jul 19 00:34:01 2021\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:23:15 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Mon Jul 19 00:34:01 2021\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:23:15 2022\n",
       "\n"
      ]
     },
@@ -104,7 +104,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Jun 22 2021 17:09:43\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -113,7 +113,7 @@
    "source": [
     "%%bash\n",
     "emu-cc -o saxpy.mwx saxpy.c\n",
-    "emusim.x -- saxpy.mwx 4 32 5.0"
+    "emusim.x -m 21 --total_nodes 1 -- saxpy.mwx 4 32 5.0"
    ]
   },
   {
@@ -132,14 +132,14 @@
       "32 \n",
       "5.0 \n",
       "************************************************\n",
-      "Simulator Version: 21.6.23\n",
+      "Simulator Version: 22.2.22\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=1\n",
-      "Total Memory (in GiB)=64\n",
+      "Total Memory (in MiB)=2\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=36\n",
+      "Log2 Memory Size per MSP=21\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
@@ -149,7 +149,7 @@
       "0: 0, 4, 5, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 17, 2, 1\n",
+      "0: 69, 85, 20\n",
       "\n"
      ]
     }
@@ -168,9 +168,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Mon Jul 19 00:34:01 2021\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:23:16 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Mon Jul 19 00:34:01 2021\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:23:16 2022\n",
       "\n"
      ]
     },
@@ -179,7 +179,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Jun 22 2021 17:09:43\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -187,7 +187,7 @@
    ],
    "source": [
     "%%bash\n",
-    "emusim.x -- saxpy.mwx 8 128 5.0"
+    "emusim.x -m 21 --total_nodes 1 -- saxpy.mwx 8 128 5.0"
    ]
   },
   {
@@ -206,14 +206,14 @@
       "128 \n",
       "5.0 \n",
       "************************************************\n",
-      "Simulator Version: 21.6.23\n",
+      "Simulator Version: 22.2.22\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=1\n",
-      "Total Memory (in GiB)=64\n",
+      "Total Memory (in MiB)=2\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=36\n",
+      "Log2 Memory Size per MSP=21\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
@@ -223,7 +223,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 18, 2, 1\n",
+      "0: 105, 91, 19\n",
       "\n"
      ]
     }
@@ -275,9 +275,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Mon Jul 19 00:34:05 2021\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:23:20 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Mon Jul 19 00:34:05 2021\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:23:20 2022\n",
       "\n"
      ]
     },
@@ -286,7 +286,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Jun 22 2021 17:09:43\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -295,7 +295,7 @@
    "source": [
     "%%bash\n",
     "emu-cc -o saxpy-for.mwx saxpy-for.c\n",
-    "emusim.x -- saxpy-for.mwx 8 128 5.0"
+    "emusim.x -m 21 --total_nodes 1 -- saxpy-for.mwx 8 128 5.0"
    ]
   },
   {
@@ -314,14 +314,14 @@
       "128 \n",
       "5.0 \n",
       "************************************************\n",
-      "Simulator Version: 21.6.23\n",
+      "Simulator Version: 22.2.22\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=1\n",
-      "Total Memory (in GiB)=64\n",
+      "Total Memory (in MiB)=2\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=36\n",
+      "Log2 Memory Size per MSP=21\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
@@ -331,7 +331,7 @@
       "0: 0, 0, 1, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 18, 8, 1\n",
+      "0: 12, 1, 1\n",
       "\n"
      ]
     }
@@ -389,9 +389,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Mon Jul 19 00:34:09 2021\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:23:24 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Mon Jul 19 00:34:09 2021\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:23:24 2022\n",
       "\n"
      ]
     },
@@ -400,7 +400,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Jun 22 2021 17:09:43\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -408,8 +408,9 @@
    ],
    "source": [
     "%%bash\n",
-    "emu-cc -o saxpy-1d.mwx saxpy-1d.c\n",
-    "emusim.x -- saxpy-1d.mwx 8 128 5.0"
+    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "emu-cc -o saxpy-1d.mwx $FLAGS saxpy-1d.c\n",
+    "emusim.x -m 21 --total_nodes 1 -- saxpy-1d.mwx 8 128 5.0"
    ]
   },
   {
@@ -428,14 +429,14 @@
       "128 \n",
       "5.0 \n",
       "************************************************\n",
-      "Simulator Version: 21.6.23\n",
+      "Simulator Version: 22.2.22\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=1\n",
-      "Total Memory (in GiB)=64\n",
+      "Total Memory (in MiB)=2\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=36\n",
+      "Log2 Memory Size per MSP=21\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
@@ -445,7 +446,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 49, 39, 5\n",
+      "0: 50, 44, 5\n",
       "\n"
      ]
     }
@@ -505,9 +506,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Mon Jul 19 00:34:13 2021\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:23:27 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Mon Jul 19 00:34:13 2021\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:23:27 2022\n",
       "\n"
      ]
     },
@@ -516,7 +517,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Jun 22 2021 17:09:43\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -524,8 +525,9 @@
    ],
    "source": [
     "%%bash\n",
-    "emu-cc -o saxpy-1d-hint.mwx saxpy-1d-hint.c\n",
-    "emusim.x -- saxpy-1d-hint.mwx 8 128 5.0"
+    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "emu-cc -o saxpy-1d-hint.mwx $FLAGS saxpy-1d-hint.c\n",
+    "emusim.x -m 21 --total_nodes 1 -- saxpy-1d-hint.mwx 8 128 5.0"
    ]
   },
   {
@@ -544,14 +546,14 @@
       "128 \n",
       "5.0 \n",
       "************************************************\n",
-      "Simulator Version: 21.6.23\n",
+      "Simulator Version: 22.2.22\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=1\n",
-      "Total Memory (in GiB)=64\n",
+      "Total Memory (in MiB)=2\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=36\n",
+      "Log2 Memory Size per MSP=21\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
@@ -561,7 +563,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 49, 39, 5\n",
+      "0: 50, 44, 5\n",
       "\n"
      ]
     }
@@ -621,9 +623,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Mon Jul 19 00:34:16 2021\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:23:30 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Mon Jul 19 00:34:16 2021\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:23:31 2022\n",
       "\n"
      ]
     },
@@ -632,7 +634,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Jun 22 2021 17:09:43\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -640,8 +642,9 @@
    ],
    "source": [
     "%%bash\n",
-    "emu-cc -o saxpy-2d-spawn-at.mwx saxpy-2d-spawn-at.c\n",
-    "emusim.x -- saxpy-2d-spawn-at.mwx 8 128 5.0"
+    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "emu-cc -o saxpy-2d-spawn-at.mwx $FLAGS saxpy-2d-spawn-at.c\n",
+    "emusim.x -m 21 --total_nodes 1 -- saxpy-2d-spawn-at.mwx 8 128 5.0"
    ]
   },
   {
@@ -660,24 +663,24 @@
       "128 \n",
       "5.0 \n",
       "************************************************\n",
-      "Simulator Version: 21.6.23\n",
+      "Simulator Version: 22.2.22\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=1\n",
-      "Total Memory (in GiB)=64\n",
+      "Total Memory (in MiB)=2\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=36\n",
+      "Log2 Memory Size per MSP=21\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
       "************************************************\n",
-      "Simulator wall clock time (seconds): 0\n",
+      "Simulator wall clock time (seconds): 1\n",
       "Node ID: Outbound Migrations, Threads Created, Threads Died, Spawn Fails\n",
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 348, 410, 3\n",
+      "0: 357, 424, 7\n",
       "\n"
      ]
     }
@@ -737,9 +740,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Mon Jul 19 00:34:18 2021\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:23:33 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Mon Jul 19 00:34:18 2021\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:23:33 2022\n",
       "\n"
      ]
     },
@@ -748,7 +751,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Jun 22 2021 17:09:43\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -756,8 +759,9 @@
    ],
    "source": [
     "%%bash\n",
-    "emu-cc -o saxpy-local-spawn-at.mwx saxpy-local-spawn-at.c\n",
-    "emusim.x -- saxpy-local-spawn-at.mwx 8 128 5.0"
+    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "emu-cc -o saxpy-local-spawn-at.mwx $FLAGS saxpy-local-spawn-at.c\n",
+    "emusim.x -m 21 --total_nodes 1 -- saxpy-local-spawn-at.mwx 8 128 5.0"
    ]
   },
   {
@@ -776,14 +780,14 @@
       "128 \n",
       "5.0 \n",
       "************************************************\n",
-      "Simulator Version: 21.6.23\n",
+      "Simulator Version: 22.2.22\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=1\n",
-      "Total Memory (in GiB)=64\n",
+      "Total Memory (in MiB)=2\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=36\n",
+      "Log2 Memory Size per MSP=21\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
@@ -793,7 +797,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 380, 488, 11\n",
+      "0: 375, 486, 9\n",
       "\n"
      ]
     }
@@ -854,9 +858,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start untimed simulation with local date and time= Mon Jul 19 00:34:22 2021\n",
+      "Start untimed simulation with local date and time= Tue Aug  2 10:23:37 2022\n",
       "\n",
-      "End untimed simulation with local date and time= Mon Jul 19 00:34:22 2021\n",
+      "End untimed simulation with local date and time= Tue Aug  2 10:23:37 2022\n",
       "\n"
      ]
     },
@@ -865,7 +869,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        SystemC 2.3.3-Accellera --- Jun 22 2021 17:09:43\n",
+      "        SystemC 2.3.3-Accellera --- Feb 22 2022 09:27:12\n",
       "        Copyright (c) 1996-2018 by all Contributors,\n",
       "        ALL RIGHTS RESERVED\n"
      ]
@@ -873,8 +877,9 @@
    ],
    "source": [
     "%%bash\n",
-    "emu-cc -o saxpy-1d-replicated.mwx saxpy-1d-replicated.c\n",
-    "emusim.x -- saxpy-1d-replicated.mwx 8 128 5"
+    "FLAGS=\"-I/tools/lucata/pathfinder-sw/22.02/include/memoryweb/ -L/tools/lucata/pathfinder-sw/22.02/lib -lmemoryweb\"\n",
+    "emu-cc -o saxpy-1d-replicated.mwx $FLAGS saxpy-1d-replicated.c\n",
+    "emusim.x -m 21 --total_nodes 1 -- saxpy-1d-replicated.mwx 8 128 5"
    ]
   },
   {
@@ -893,14 +898,14 @@
       "128 \n",
       "5 \n",
       "************************************************\n",
-      "Simulator Version: 21.6.23\n",
+      "Simulator Version: 22.2.22\n",
       "************************************************\n",
       "Configuration Details:\n",
       "Ring Model = Stratix: 3 GC Clusters, 8 MSPs\n",
       "Number of Nodes=1\n",
-      "Total Memory (in GiB)=64\n",
+      "Total Memory (in MiB)=2\n",
       "Logical MSPs per Node=1\n",
-      "Log2 Memory Size per MSP=36\n",
+      "Log2 Memory Size per MSP=21\n",
       "GC Clusters per Node=3\n",
       "GCs per Cluster=8\n",
       "************************************************\n",
@@ -910,7 +915,7 @@
       "0: 0, 8, 9, 0\n",
       "\n",
       "NodeID: num_reads, num_writes, num_rmws\n",
-      "0: 49, 39, 5\n",
+      "0: 50, 44, 5\n",
       "\n"
      ]
     }
@@ -942,7 +947,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python Notebook - CRNCH Tutorial",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -956,7 +961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
